[build-system]
  requires = [
	"scikit-build-core",
	"cython >= 3.0.8",
]
build-backend = "scikit_build_core.build"

[project]
name = "smtk_draco"
version = "0.0.0"
authors = [
    {name = "barasimumatik"},
]
maintainers = [
	{name="Simumatik"}
]
description = "Simple Python wrapper for Blenders minimal DRACO decoder/encoder"
readme = "README.md"
keywords = ["draco", "mesh compression"]
license = {file = "LICENSE"}
classifiers = [
	"Intended Audience :: Developers",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]

requires-python = ">= 3.7"

[project.urls]
Repository = "https://github.com/Simumatik/smtk_draco"
Issues = "https://github.com/Simumatik/smtk_draco/issues"

[tool.scikit-build]
cmake.version = ">=3.18"
cmake.verbose = true
sdist.exclude = [
    "draco/.github", 
    "draco/docs", 
    "draco/javascript",
    "draco/maya", 
    "draco/testdata",
    "draco/third_party", 
    "draco/unity", 
]